--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background: url(images\background.png);
+    background: url('images/background.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
